added styles for rest of page and social icon images

--- a/index.html
+++ b/index.html
@@ -9,91 +9,92 @@
 </head>
 
 <body>
-    <header>
+    <header class="neutral-theme">
         <h1>Hello! My name is <span class="heading-highlight">Jo Franchetti</span>.<br>
             I'm a Web Developer</h1>
-        <a href="#" class="button">Find out more</a>
+        <a href="#main" class="button header-link">Find out more</a>
     </header>
-    <main>
-        <section class="about">
+    <main id="main">
+        <section class="about primary-theme">
             <h2>About me</h2>
-            <img src="jo.png" class="about-img" alt="A portrait photograph of a woman with bright pink hair cut into a bob. She is smiling at the camera and has rainbow coloured eyeshadow.">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque mi nec aliquam sollicitudin. Maecenas maximus nec ante eget iaculis. Pellentesque
-                habitant morbi
-                tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur accumsan ligula nec dolor lacinia ullamcorper. Proin consequat arcu eu sollicitudin
-                facilisis. Ut
-                dignissim velit ut ipsum volutpat consectetur. Sed mi tellus, condimentum sit amet tincidunt nec, sodales eu ipsum. Fusce bibendum, dui eu congue aliquam, lorem
-                nisi pretium augue,
-                nec tempus tellus odio a quam. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec elit pulvinar, tristique arcu quis, ornare massa. Integer quis
-                nisl elit.
-                Suspendisse ultrices, velit nec tristique molestie, nisi tortor vestibulum augue, nec dictum ante dui sagittis enim.</p>
+            <div class="about-info">
+                <img src="jo.jpg" class="about-img"
+                    alt="A portrait photograph of a woman with bright pink hair cut into a bob. She is smiling at the camera and has rainbow coloured eyeshadow.">
+                <div class="about-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque mi nec aliquam sollicitudin. Maecenas maximus nec ante eget iaculis.
+                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur accumsan ligula nec dolor lacinia ullamcorper. Proin
+                        consequat arcu eu sollicitudin facilisis. Ut dignissim velit ut ipsum volutpat consectetur. Sed mi tellus, condimentum sit amet tincidunt nec, sodales eu
+                        ipsum. Fusce bibendum, dui eu congue aliquam, lorem nisi pretium augue, nec tempus tellus odio a quam. Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Donec nec elit pulvinar, tristique arcu quis, ornare massa. Integer quis nisl elit. Suspendisse ultrices, velit nec tristique molestie, nisi tortor
+                        vestibulum augue, nec dictum ante dui sagittis enim.</p>
 
-            <p>Pellentesque id sodales est. Nullam viverra luctus vulputate. Nunc rutrum nibh sed tincidunt pretium. Sed ac eros maximus, volutpat dui ut, volutpat elit. Cras nibh
-                turpis,
-                venenatis a aliquam sit amet, gravida vitae felis. Curabitur vel pellentesque sapien. Maecenas quis metus odio.</p>
+                    <p>Pellentesque id sodales est. Nullam viverra luctus vulputate. Nunc rutrum nibh sed tincidunt pretium. Sed ac eros maximus, volutpat dui ut, volutpat elit.
+                        Cras nibh turpis, venenatis a aliquam sit amet, gravida vitae felis. Curabitur vel pellentesque sapien. Maecenas quis metus odio.</p>
 
-            <p>Integer pretium dapibus tempus. Duis porta vitae sapien quis ultrices. Sed et lorem in ligula lacinia rhoncus. Etiam in turpis ut lectus blandit maximus. Aliquam
-                lacus mi, vehicula
-                id porta quis, feugiat a risus. Curabitur bibendum viverra nulla, at blandit massa sollicitudin non. Etiam et erat fringilla, eleifend leo quis, hendrerit urna.
-                Vestibulum
-                tristique eget tellus et imperdiet. Etiam congue risus eget massa laoreet, eu ultrices massa porta. Aenean ornare volutpat turpis ut eleifend. Vivamus vitae
-                tincidunt felis. Mauris
-                tincidunt varius justo sit amet gravida. Nam aliquam sit amet enim vitae egestas.
-            </p>
-            <a href="#">My Resume</a>
-
+                    <p>Integer pretium dapibus tempus. Duis porta vitae sapien quis ultrices. Sed et lorem in ligula lacinia rhoncus. Etiam in turpis ut lectus blandit maximus.
+                        Aliquam lacus mi, vehicula id porta quis, feugiat a risus. Curabitur bibendum viverra nulla, at blandit massa sollicitudin non. Etiam et erat fringilla,
+                        eleifend leo quis, hendrerit urna. Vestibulum tristique eget tellus et imperdiet. Etiam congue risus eget massa laoreet, eu ultrices massa porta. Aenean
+                        ornare volutpat turpis ut eleifend. Vivamus vitae tincidunt felis. Mauris tincidunt varius justo sit amet gravida. Nam aliquam sit amet enim vitae egestas.
+                    </p>
+                    <a href="#" class="button">My Resume</a>
+                </div>
+            </div>
             <blockquote>
                 The frontendest of frontend developers.
                 <cite>Richard Westenra</cite>
             </blockquote>
         </section>
-        <section>
+        <section class="neutral-theme">
             <h2>Projects</h2>
             <article>
-                <h3>Project Title</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptates ipsum eos repellendus est, praesentium aliquid a excepturi provident quod
-                    reprehenderit.</p>
-                <a href="#">See it live</a>
-                <a href="#">Fork it on GitHub</a>
-                <img src="http://placekitten.com/300/200" alt="project screenshot">
+                <div class="article-text">
+                    <h3>Project Title</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptates ipsum eos repellendus est, praesentium aliquid a excepturi provident quod
+                        reprehenderit.</p>
+                    <a href="#" class="button">See it live</a>
+                    <a href="#" class="button">Fork it on GitHub</a>
+                </div>
+                <img src="http://placekitten.com/300/200" alt="project screenshot" class="article-img">
             </article>
             <article>
-                <h3>Project Title</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptates ipsum eos repellendus est, praesentium aliquid a excepturi provident quod
-                    reprehenderit.</p>
-                <a href="#">See it live</a>
-                <a href="#">Fork it on GitHub</a>
-                <img src="http://placekitten.com/300/200" alt="project screenshot">
+                <div class="article-text">
+                    <h3>Project Title</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptates ipsum eos repellendus est, praesentium aliquid a excepturi provident quod
+                        reprehenderit.</p>
+                    <a href="#" class="button">See it live</a>
+                    <a href="#" class="button">Fork it on GitHub</a>
+                </div>
+                <img src="http://placekitten.com/300/200" alt="project screenshot" class="article-img">
             </article>
             <article>
-                <h3>Project Title</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptates ipsum eos repellendus est, praesentium aliquid a excepturi provident quod
-                    reprehenderit.</p>
-                <a href="#">See it live</a>
-                <a href="#">Fork it on GitHub</a>
-                <img src="http://placekitten.com/300/200" alt="project screenshot">
+                <div class="article-text">
+                    <h3>Project Title</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptates ipsum eos repellendus est, praesentium aliquid a excepturi provident quo reprehenderit.</p>
+                    <a href="#" class="button">See it live</a>
+                    <a href="#" class="button">Fork it on GitHub</a>
+                </div>
+                <img src="http://placekitten.com/300/200" alt="project screenshot" class="article-img">
             </article>
         </section>
-        <section>
+        <section class="primary-theme contact">
             <h2>Contact</h2>
             <p>If you would like to work with me, you can drop me a message!</p>
-            <a href="mailto:email@test.com">Let's talk</a>
+            <a href="mailto:email@test.com" class="button">Let's talk</a>
         </section>
     </main>
     <footer>
-        <ul>
-            <li>
-                <a href="https://www.linkedin.com/in/thisisjofrank/">LinkedIn</a>
+        <ul class="social">
+            <li class="social-item">
+                <a class="social-link li" href="https://www.linkedin.com/in/thisisjofrank/">LinkedIn</a>
             </li>
-            <li>
-                <a href="#">Mastodon</a>
+            <li class="social-item">
+                <a class="social-link ty" href="#">YouTube</a>
             </li>
-            <li>
-                <a href="#">GitHub</a>
+            <li class="social-item">
+                <a class="social-link gh" href="#">GitHub</a>
             </li>
-            <li>
-                <a href="#">Instagram</a>
+            <li class="social-item">
+                <a class="social-link tw" href="#">tw</a>
             </li>
         </ul>
         <p>&copy; 2023 Jo Franchetti design by Jo Franchetti</p>
